--- a/.gitattributes
+++ b/.gitattributes
@@ -725,6 +725,8 @@ components/education/edumenu.pas svneol=native#text/plain
 components/education/edunewprogram.lfm svneol=native#text/plain
 components/education/edunewprogram.lrs svneol=native#text/plain
 components/education/edunewprogram.pas svneol=native#text/plain
+components/education/eduoipages.lfm svneol=native#text/plain
+components/education/eduoipages.pas svneol=native#text/plain
 components/education/eduoptions.pas svneol=native#text/plain
 components/education/eduoptionsdlg.lfm svneol=native#text/plain
 components/education/eduoptionsdlg.lrs svneol=native#text/plain
@@ -735,6 +737,7 @@ components/education/edupkgsystem.pas svneol=native#text/plain
 components/education/edupropsevents.lfm svneol=native#text/plain
 components/education/edupropsevents.lrs svneol=native#text/plain
 components/education/edupropsevents.pas svneol=native#text/plain
+components/education/eduspeedbuttons.lfm svneol=native#text/plain
 components/externhelp/README.txt svneol=native#text/plain
 components/externhelp/externhelp.lpk svneol=native#text/plain
 components/externhelp/externhelp.pas svneol=native#text/plain
