--- a/.gitattributes
+++ b/.gitattributes
@@ -355,6 +355,7 @@ components/cgi/ide/README.txt svneol=native#text/plain
 components/cgi/ide/cgilazide.lpk svneol=native#text/pascal
 components/cgi/ide/cgilazide.pas svneol=native#text/plain
 components/cgi/ide/cgilazideintf.pas svneol=native#text/pascal
+components/cgi/ide/languages/cgilazideintf.po svneol=native#text/plain
 components/cgi/ide/lib/README.txt svneol=native#text/plain
 components/cgi/languages/cgimodules.de.po svneol=native#text/plain
 components/cgi/languages/cgimodules.id.po svneol=native#text/plain
