Components: Added translations for CGI component: 1) Portuguese by Marcelo B Paula (another part of bug #16312) with technical change. 2) Russian.
git-svn-id: trunk@24805 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -355,7 +355,9 @@ components/cgi/ide/README.txt svneol=native#text/plain
 components/cgi/ide/cgilazide.lpk svneol=native#text/pascal
 components/cgi/ide/cgilazide.pas svneol=native#text/plain
 components/cgi/ide/cgilazideintf.pas svneol=native#text/pascal
+components/cgi/ide/languages/cgilazideintf.pb.po svneol=native#text/plain
 components/cgi/ide/languages/cgilazideintf.po svneol=native#text/plain
+components/cgi/ide/languages/cgilazideintf.ru.po svneol=native#text/plain
 components/cgi/ide/lib/README.txt svneol=native#text/plain
 components/cgi/languages/cgimodules.de.po svneol=native#text/plain
 components/cgi/languages/cgimodules.id.po svneol=native#text/plain
