--- a/.gitattributes
+++ b/.gitattributes
@@ -3433,6 +3433,8 @@ ide/frames/editor_mouseaction_options.lfm svneol=native#text/plain
 ide/frames/editor_mouseaction_options.pas svneol=native#text/pascal
 ide/frames/editor_mouseaction_options_advanced.lfm svneol=native#text/plain
 ide/frames/editor_mouseaction_options_advanced.pas svneol=native#text/pascal
+ide/frames/editor_multiwindow_options.lfm svneol=native#text/plain
+ide/frames/editor_multiwindow_options.pas svneol=native#text/pascal
 ide/frames/files_options.lfm svneol=native#text/plain
 ide/frames/files_options.pas svneol=native#text/pascal
 ide/frames/formed_options.lfm svneol=native#text/plain
