--- a/.gitattributes
+++ b/.gitattributes
@@ -775,6 +775,9 @@ components/fpcunit/ide/fpcunitide.pas svneol=native#text/pascal
 components/fpcunit/ide/fpcunitlazideintf.pas svneol=native#text/pascal
 components/fpcunit/ide/fpcunitproject1.inc svneol=native#text/plain
 components/fpcunit/ide/fpcunitproject1.pas svneol=native#text/plain
+components/fpcunit/ide/languages/fpcunitlazideintf.pb.po svneol=native#text/plain
+components/fpcunit/ide/languages/fpcunitlazideintf.po svneol=native#text/plain
+components/fpcunit/ide/languages/fpcunitlazideintf.ru.po svneol=native#text/plain
 components/fpcunit/ide/lib/README.txt svneol=native#text/plain
 components/fpcunit/ide/testcaseopts.lfm svneol=native#text/plain
 components/fpcunit/ide/testcaseopts.pas svneol=native#text/pascal
