--- a/.gitattributes
+++ b/.gitattributes
@@ -2060,6 +2060,8 @@ components/synedit/syntextdrawer.pp svneol=native#text/pascal
 components/synedit/test/SynTest.lpi svneol=native#text/plain
 components/synedit/test/SynTest.lpr svneol=native#text/pascal
 components/synedit/test/testbase.pas svneol=native#text/pascal
+components/synedit/test/testhighlightmulti.pas svneol=native#text/pascal
+components/synedit/test/testhighlightxml.pas svneol=native#text/pascal
 components/synedit/test/testsynbeautifier.pas svneol=native#text/pascal
 components/synedit/test/testsyncroedit.pas svneol=native#text/pascal
 components/synedit/test/testsynselection.pas svneol=native#text/pascal
