IDE: started options frame for messages
git-svn-id: trunk@45191 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5349,6 +5349,8 @@ ide/frames/fpdoc_options.pas svneol=native#text/pascal
 ide/frames/help_general_options.lfm svneol=native#text/plain
 ide/frames/help_general_options.pas svneol=native#text/plain
 ide/frames/modematrixctrl.pas svneol=native#text/plain
+ide/frames/msgwnd_options.lfm svneol=native#text/plain
+ide/frames/msgwnd_options.pas svneol=native#text/plain
 ide/frames/naming_options.lfm svneol=native#text/plain
 ide/frames/naming_options.pas svneol=native#text/pascal
 ide/frames/oi_options.lfm svneol=native#text/plain
