--- a/.gitattributes
+++ b/.gitattributes
@@ -5427,6 +5427,7 @@ ide/infobuild.lfm svneol=native#text/plain
 ide/infobuild.pp svneol=native#text/plain
 ide/initialsetupdlgs.lfm svneol=native#text/plain
 ide/initialsetupdlgs.pas svneol=native#text/pascal
+ide/initialsetupproc.pas svneol=native#text/plain
 ide/inputfiledialog.pas svneol=native#text/pascal
 ide/inputhistory.pas svneol=native#text/pascal
 ide/inspectchksumchangeddlg.lfm svneol=native#text/plain
