--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -63,7 +63,7 @@
         <PackageName Value="SynEdit"/>
       </Item6>
     </RequiredPackages>
-    <Units Count="251">
+    <Units Count="252">
       <Unit0>
         <Filename Value="lazarus.pp"/>
         <IsPartOfProject Value="True"/>
@@ -1506,6 +1506,11 @@
         <IsPartOfProject Value="True"/>
         <HasResources Value="True"/>
       </Unit250>
+      <Unit251>
+        <Filename Value="initialsetupproc.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="InitialSetupProc"/>
+      </Unit251>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
