IDE: linux desktop keywords, patch #26340 from Paul Gevers
git-svn-id: trunk@45511 -

--- a/install/lazarus.desktop
+++ b/install/lazarus.desktop
@@ -8,6 +8,7 @@ Icon=lazarus.png
 Categories=Application;IDE;Development;GTK;GUIDesigner;
 StartupWMClass=Lazarus
 MimeType=text/x-pascal;text/lazarus-project-source;text/lazarus-project-information;text/lazarus-form;text/lazarus-resource;text/lazarus-package;text/lazarus-package-link;text/lazarus-code-inlay;
+Keywords=editor;Pascal;IDE;FreePascal;fpc;Design;Designer;
 [Property::X-KDE-NativeExtension]
 Type=QString
 Value=.pas
