FpDebug (pure): Added Linux-support
git-svn-id: trunk@45732 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1282,6 +1282,8 @@ components/fpdebug/fpdbgdwarfdataclasses.pas svneol=native#text/pascal
 components/fpdebug/fpdbgdwarffreepascal.pas svneol=native#text/pascal
 components/fpdebug/fpdbgdwarfverboseprinter.pas svneol=native#text/pascal
 components/fpdebug/fpdbginfo.pas svneol=native#text/pascal
+components/fpdebug/fpdbglinuxclasses.pas svneol=native#text/plain
+components/fpdebug/fpdbglinuxextra.pas svneol=native#text/plain
 components/fpdebug/fpdbgloader.pp svneol=native#text/pascal
 components/fpdebug/fpdbgpetypes.pp svneol=native#text/pascal
 components/fpdebug/fpdbgsymbols.pas svneol=native#text/pascal
