--- a/.gitattributes
+++ b/.gitattributes
@@ -249,6 +249,7 @@ components/activex/importtypelib.lfm svneol=native#text/plain
 components/activex/importtypelib.pas svneol=native#text/plain
 components/activex/languages/activexstrconsts.cs.po svneol=native#text/plain
 components/activex/languages/activexstrconsts.fi.po svneol=native#text/plain
+components/activex/languages/activexstrconsts.hu.po svneol=native#text/plain
 components/activex/languages/activexstrconsts.po svneol=native#text/plain
 components/activex/languages/activexstrconsts.ru.po svneol=native#text/plain
 components/activex/lazactivexreg.pas svneol=native#text/plain
@@ -1234,6 +1235,7 @@ components/fpcunit/ide/fpcunitlazideintf.pas svneol=native#text/pascal
 components/fpcunit/ide/fpcunitproject1.inc svneol=native#text/plain
 components/fpcunit/ide/fpcunitproject1.pas svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.cs.po svneol=native#text/plain
+components/fpcunit/ide/languages/fpcunitlazideintf.hu.po svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.it.po svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.lt.po svneol=native#text/plain
 components/fpcunit/ide/languages/fpcunitlazideintf.po svneol=native#text/plain
@@ -1242,6 +1244,7 @@ components/fpcunit/ide/languages/fpcunitlazideintf.ru.po svneol=native#text/plai
 components/fpcunit/ide/languages/fpcunitlazideintf.uk.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.cs.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.de.po svneol=native#text/plain
+components/fpcunit/ide/languages/strtestcaseopts.hu.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.it.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.lt.po svneol=native#text/plain
 components/fpcunit/ide/languages/strtestcaseopts.po svneol=native#text/plain
@@ -1526,6 +1529,7 @@ components/fpweb/images/tag_u.png -text svneol=unset#image/png
 components/fpweb/images/tag_ul.png -text svneol=unset#image/png
 components/fpweb/languages/fpwebstrconsts.cs.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.de.po svneol=native#text/plain
+components/fpweb/languages/fpwebstrconsts.hu.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.it.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.lt.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.po svneol=native#text/plain
@@ -1534,6 +1538,7 @@ components/fpweb/languages/fpwebstrconsts.ru.po svneol=native#text/plain
 components/fpweb/languages/fpwebstrconsts.uk.po svneol=native#text/plain
 components/fpweb/languages/fpwebtoolsunit.cs.po svneol=native#text/plain
 components/fpweb/languages/fpwebtoolsunit.de.po svneol=native#text/plain
+components/fpweb/languages/fpwebtoolsunit.hu.po svneol=native#text/plain
 components/fpweb/languages/fpwebtoolsunit.it.po svneol=native#text/plain
 components/fpweb/languages/fpwebtoolsunit.lt.po svneol=native#text/plain
 components/fpweb/languages/fpwebtoolsunit.po svneol=native#text/plain
@@ -1542,6 +1547,7 @@ components/fpweb/languages/fpwebtoolsunit.ru.po svneol=native#text/plain
 components/fpweb/languages/fpwebtoolsunit.uk.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.cs.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.de.po svneol=native#text/plain
+components/fpweb/languages/frmrpcmoduleoptions.hu.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.it.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.lt.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.po svneol=native#text/plain
@@ -1549,6 +1555,7 @@ components/fpweb/languages/frmrpcmoduleoptions.pt_BR.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.ru.po svneol=native#text/plain
 components/fpweb/languages/frmrpcmoduleoptions.uk.po svneol=native#text/plain
 components/fpweb/languages/reglazwebextra.cs.po svneol=native#text/plain
+components/fpweb/languages/reglazwebextra.hu.po svneol=native#text/plain
 components/fpweb/languages/reglazwebextra.it.po svneol=native#text/plain
 components/fpweb/languages/reglazwebextra.lt.po svneol=native#text/plain
 components/fpweb/languages/reglazwebextra.po svneol=native#text/plain
@@ -1556,6 +1563,7 @@ components/fpweb/languages/reglazwebextra.pt_BR.po svneol=native#text/plain
 components/fpweb/languages/reglazwebextra.ru.po svneol=native#text/plain
 components/fpweb/languages/reglazwebextra.uk.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.cs.po svneol=native#text/plain
+components/fpweb/languages/weblazideintf.hu.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.it.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.lt.po svneol=native#text/plain
 components/fpweb/languages/weblazideintf.po svneol=native#text/plain
@@ -2703,6 +2711,7 @@ components/macroscript/emsideoptions.lfm svneol=native#text/pascal
 components/macroscript/emsideoptions.pas svneol=native#text/pascal
 components/macroscript/emsselftest.pas svneol=native#text/pascal
 components/macroscript/emsstrings.pas svneol=native#text/pascal
+components/macroscript/languages/emsstrings.hu.po svneol=native#text/plain
 components/macroscript/languages/emsstrings.po svneol=native#text/plain
 components/macroscript/languages/emsstrings.ru.po svneol=native#text/plain
 components/macroscript/registerems.pas svneol=native#text/pascal
