Translations: Czech translation update by Vaclav Valicek, bug #26394
git-svn-id: trunk@45755 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8221,6 +8221,7 @@ tools/jsonviewer/jsonviewer.ico -text
 tools/jsonviewer/jsonviewer.lpi svneol=native#text/plain
 tools/jsonviewer/jsonviewer.lpr svneol=native#text/plain
 tools/jsonviewer/jsonviewer.res -text
+tools/jsonviewer/languages/jsonviewer.cs.po svneol=native#text/plain
 tools/jsonviewer/languages/jsonviewer.de.po svneol=native#text/plain
 tools/jsonviewer/languages/jsonviewer.es.po svneol=native#text/plain
 tools/jsonviewer/languages/jsonviewer.hu.po svneol=native#text/plain
