--- a/.gitattributes
+++ b/.gitattributes
@@ -2855,6 +2855,7 @@ components/pochecker/languages/pocheckerconsts.cs.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.de.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.es.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.hu.po svneol=native#text/plain
+components/pochecker/languages/pocheckerconsts.it.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.ja.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.lt.po svneol=native#text/plain
 components/pochecker/languages/pocheckerconsts.po svneol=native#text/plain
@@ -6029,6 +6030,7 @@ install/man/man1/updatepofiles.1 svneol=native#text/plain
 languages/README.txt svneol=native#text/plain
 languages/debuggerstrconst.es.po svneol=native#text/plain
 languages/debuggerstrconst.hu.po svneol=native#text/plain
+languages/debuggerstrconst.it.po svneol=native#text/plain
 languages/debuggerstrconst.lt.po svneol=native#text/plain
 languages/debuggerstrconst.po svneol=native#text/plain
 languages/debuggerstrconst.ru.po svneol=native#text/plain
