iPro: moved HTML property classes to a new unit.
git-svn-id: trunk@45809 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3805,6 +3805,7 @@ components/turbopower_ipro/ipdefine.inc svneol=native#text/pascal
 components/turbopower_ipro/ipfilebroker.pas svneol=native#text/plain
 components/turbopower_ipro/iphtml.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtml.res -text
+components/turbopower_ipro/iphtmlprop.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmlpv.lfm svneol=native#text/plain
 components/turbopower_ipro/iphtmlpv.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmltablist.pas svneol=native#text/plain
