--- a/examples/scrollbar.lpi
+++ b/examples/scrollbar.lpi
@@ -1,28 +1,19 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="/"/>
-    <Version Value="5"/>
+    <Version Value="9"/>
     <General>
       <Flags>
-        <SaveOnlyProjectUnits Value="True"/>
+        <SaveClosedFiles Value="False"/>
+        <SaveJumpHistory Value="False"/>
       </Flags>
+      <SessionStorage Value="InIDEConfig"/>
       <MainUnit Value="0"/>
-      <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ResourceType Value="res"/>
     </General>
-    <Units Count="1">
-      <Unit0>
-        <CursorPos X="23" Y="48"/>
-        <EditorIndex Value="0"/>
-        <Filename Value="scrollbar.pp"/>
-        <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
-        <TopLine Value="25"/>
-        <UnitName Value="Scrollbar"/>
-        <UsageCount Value="20"/>
-      </Unit0>
-    </Units>
+    <BuildModes Count="1">
+      <Item1 Name="default" Default="True"/>
+    </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
       <IgnoreBinaries Value="False"/>
@@ -40,15 +31,24 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
+    <Units Count="1">
+      <Unit0>
+        <Filename Value="scrollbar.pp"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Scrollbar"/>
+      </Unit0>
+    </Units>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="5"/>
+    <Version Value="11"/>
     <SearchPaths>
-      <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
+      <IncludeFiles Value="$(ProjOutDir)"/>
     </SearchPaths>
-    <CodeGeneration>
-      <Generate Value="Faster"/>
-    </CodeGeneration>
+    <Parsing>
+      <SyntaxOptions>
+        <UseAnsiStrings Value="False"/>
+      </SyntaxOptions>
+    </Parsing>
     <Linking>
       <Options>
         <Win32>
@@ -56,8 +56,5 @@
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
 </CONFIG>
