--- a/.gitattributes
+++ b/.gitattributes
@@ -7243,6 +7243,7 @@ packager/pkglinksdlg.pas svneol=native#text/plain
 packager/pkgmanager.pas svneol=native#text/pascal
 packager/pkgvirtualuniteditor.lfm svneol=native#text/plain
 packager/pkgvirtualuniteditor.pas svneol=native#text/pascal
+packager/projpackbase.pas svneol=native#text/pascal
 packager/registration/Makefile.compiled svneol=native#text/plain
 packager/registration/README.txt svneol=native#text/plain
 packager/registration/fcl.lpk svneol=native#text/plain
