--- a/.gitattributes
+++ b/.gitattributes
@@ -3805,9 +3805,11 @@ components/turbopower_ipro/ipdefine.inc svneol=native#text/pascal
 components/turbopower_ipro/ipfilebroker.pas svneol=native#text/plain
 components/turbopower_ipro/iphtml.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtml.res -text
+components/turbopower_ipro/iphtmlblocklayout.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmlprop.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmlpv.lfm svneol=native#text/plain
 components/turbopower_ipro/iphtmlpv.pas svneol=native#text/pascal
+components/turbopower_ipro/iphtmltablelayout.pas svneol=native#text/pascal
 components/turbopower_ipro/iphtmltablist.pas svneol=native#text/plain
 components/turbopower_ipro/ipmsg.pas svneol=native#text/pascal
 components/turbopower_ipro/ipstrms.pas svneol=native#text/pascal
