LazThread: enabled i18n; added Russian translation. Bug #26499.
git-svn-id: trunk@45970 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2563,6 +2563,10 @@ components/lazsvnpkg/svnstatusform.lfm svneol=native#text/plain
 components/lazsvnpkg/svnstatusform.pas svneol=native#text/plain
 components/lazsvnpkg/svnupdateform.lfm svneol=native#text/plain
 components/lazsvnpkg/svnupdateform.pas svneol=native#text/plain
+components/lazthread/languages/reglazthread.po svneol=native#text/plain
+components/lazthread/languages/reglazthread.ru.po svneol=native#text/plain
+components/lazthread/languages/threadoptionsdialog.po svneol=native#text/plain
+components/lazthread/languages/threadoptionsdialog.ru.po svneol=native#text/plain
 components/lazthread/lazthread.lpk svneol=native#text/plain
 components/lazthread/lazthread.pas svneol=native#text/plain
 components/lazthread/reglazthread.pas svneol=native#text/plain
