--- a/.gitattributes
+++ b/.gitattributes
@@ -4551,6 +4551,12 @@ examples/database/sqldbtutorial3/readme.txt svneol=native#text/plain
 examples/database/sqldbtutorial3/sqldbtutorial3.ini svneol=native#text/plain
 examples/database/sqldbtutorial3/sqldbtutorial3.lpi svneol=native#text/plain
 examples/database/sqldbtutorial3/sqldbtutorial3.lpr svneol=native#text/pascal
+examples/database/sqlite_encryption_pragma/README.txt svneol=native#text/plain
+examples/database/sqlite_encryption_pragma/project1.lpi svneol=native#text/plain
+examples/database/sqlite_encryption_pragma/project1.lpr svneol=native#text/pascal
+examples/database/sqlite_encryption_pragma/project1.res -text
+examples/database/sqlite_encryption_pragma/unit1.lfm svneol=native#text/plain
+examples/database/sqlite_encryption_pragma/unit1.pas svneol=native#text/pascal
 examples/database/sqlite_mushrooms/ImageTest.db3 -text
 examples/database/sqlite_mushrooms/Mushroom_Report.lrf svneol=native#text/plain
 examples/database/sqlite_mushrooms/Readme.txt svneol=native#text/plain
