--- a/.gitattributes
+++ b/.gitattributes
@@ -2485,6 +2485,8 @@ components/lazreport/source/lr_e_csv.pas svneol=native#text/pascal
 components/lazreport/source/lr_e_gen.pas svneol=native#text/pascal
 components/lazreport/source/lr_e_htm.pas svneol=native#text/pascal
 components/lazreport/source/lr_e_txt.pas svneol=native#text/pascal
+components/lazreport/source/lr_e_txt_params.lfm svneol=native#text/plain
+components/lazreport/source/lr_e_txt_params.pas svneol=native#text/pascal
 components/lazreport/source/lr_edit.lfm svneol=native#text/plain
 components/lazreport/source/lr_edit.pas svneol=native#text/pascal
 components/lazreport/source/lr_ev_ed.lfm svneol=native#text/plain
