--- a/.gitattributes
+++ b/.gitattributes
@@ -598,6 +598,7 @@ components/anchordocking/doc/anchordocking.xml svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.cs.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.de.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.es.po svneol=native#text/plain
+components/anchordocking/languages/anchordockstr.hu.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.it.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.lt.po svneol=native#text/plain
 components/anchordocking/languages/anchordockstr.po svneol=native#text/plain
