--- a/.gitattributes
+++ b/.gitattributes
@@ -2126,6 +2126,7 @@ components/lazreport/images/bitmaps/fr_pencil.cur -text
 components/lazreport/images/bitmaps/fr_radio.bmp -text
 components/lazreport/images/bitmaps/fr_script.bmp -text
 components/lazreport/images/bitmaps/fr_undrline.bmp -text
+components/lazreport/images/bitmaps/lr_crossview.bmp -text svneol=unset#image/x-ms-bmp
 components/lazreport/images/bitmaps/tfrbarcodeobject.png -text svneol=unset#image/png
 components/lazreport/images/bitmaps/tfrchartobject.bmp -text
 components/lazreport/images/bitmaps/tfrcheckboxobject.png -text svneol=unset#image/png
@@ -2155,6 +2156,7 @@ components/lazreport/images/bitmaps/tfrtbseparator.bmp -text
 components/lazreport/images/bitmaps/tfrtextexport.png -text svneol=unset#image/png
 components/lazreport/images/bitmaps/tfrtoolbar.bmp -text
 components/lazreport/images/bitmaps/tfruserdataset.png -text svneol=unset#image/png
+components/lazreport/images/bitmaps/tlrcrossobject.png -text svneol=unset#image/png
 components/lazreport/images/designer/fr_bold.xpm svneol=native#text/x-pixmap
 components/lazreport/images/designer/fr_heightwidth.xpm svneol=native#text/x-pixmap
 components/lazreport/images/designer/fr_italic.xpm svneol=native#text/x-pixmap
@@ -2179,6 +2181,7 @@ components/lazreport/images/designer/lrd_copy.png -text
 components/lazreport/images/designer/lrd_cut.png -text
 components/lazreport/images/designer/lrd_grid.png -text
 components/lazreport/images/designer/lrd_grid_align.png -text
+components/lazreport/images/designer/lrd_ins_fields.bmp -text svneol=unset#image/x-ms-bmp
 components/lazreport/images/designer/lrd_italic.png -text
 components/lazreport/images/designer/lrd_new.png -text
 components/lazreport/images/designer/lrd_open.png -text
