chmmaker: * Actually show files in listbox (instead of nothing) * Cosmetic/possible memleak fixes * Updated readme to reflect snapshots not being available anymore patch 26679 from Reinier
git-svn-id: trunk@46131 -

--- a/tools/chmmaker/chmmaker.lpi
+++ b/tools/chmmaker/chmmaker.lpi
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
     <Version Value="9"/>
@@ -44,12 +44,12 @@
       <Unit0>
         <Filename Value="chmmaker.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="chmmaker"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="CHMForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="unit1"/>
       </Unit1>
@@ -58,7 +58,6 @@
         <IsPartOfProject Value="True"/>
         <ComponentName Value="SitemapEditForm"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="CHMSiteMapEditor"/>
       </Unit2>
     </Units>
   </ProjectOptions>
@@ -86,8 +85,5 @@
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
 </CONFIG>
