--- a/.gitattributes
+++ b/.gitattributes
@@ -3745,6 +3745,10 @@ components/tachart/test/SourcesTest.pas svneol=native#text/pascal
 components/tachart/test/UtilsTest.pas svneol=native#text/pascal
 components/tachart/test/test.lpi svneol=native#text/plain
 components/tachart/test/test.lpr svneol=native#text/pascal
+components/tachart/tutorials/background/backimage.lpi svneol=native#text/plain
+components/tachart/tutorials/background/backimage.lpr svneol=native#text/plain
+components/tachart/tutorials/background/main.lfm svneol=native#text/plain
+components/tachart/tutorials/background/main.pas svneol=native#text/plain
 components/tachart/tutorials/bar_series/horizontal_bars/project1.lpi svneol=native#text/pascal
 components/tachart/tutorials/bar_series/horizontal_bars/project1.lpr svneol=native#text/pascal
 components/tachart/tutorials/bar_series/horizontal_bars/unit1.lfm svneol=native#text/pascal
