--- a/.gitattributes
+++ b/.gitattributes
@@ -4532,6 +4532,9 @@ examples/canvas_test/screenshotunit.lfm svneol=native#text/pascal
 examples/canvas_test/screenshotunit.pas svneol=native#text/pascal
 examples/canvas_test/shapedwindowtest.lfm svneol=native#text/pascal
 examples/canvas_test/shapedwindowtest.pas svneol=native#text/pascal
+examples/canvas_test/systemcolorstest.lfm svneol=native#text/plain
+examples/canvas_test/systemcolorstest.lrs svneol=native#text/plain
+examples/canvas_test/systemcolorstest.pas svneol=native#text/plain
 examples/checkbox.lpi svneol=native#text/plain
 examples/checkbox.pp svneol=native#text/pascal
 examples/cleandir/README.txt svneol=native#text/plain
