IDE: Mkefiles needed when adding EditorToolbar for Lazarus BigIde.
git-svn-id: trunk@46205 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1132,6 +1132,9 @@ components/debuggerintf/dbgintfdebuggerbase.pp svneol=native#text/pascal
 components/debuggerintf/dbgintfmiscclasses.pas svneol=native#text/pascal
 components/debuggerintf/debuggerintf.lpk svneol=native#text/plain
 components/debuggerintf/debuggerintf.pas svneol=native#text/pascal
+components/editortoolbar/Makefile svneol=native#text/plain
+components/editortoolbar/Makefile.compiled svneol=native#text/plain
+components/editortoolbar/Makefile.fpc svneol=native#text/plain
 components/editortoolbar/editortoolbar.lpk svneol=native#text/plain
 components/editortoolbar/editortoolbar.pas svneol=native#text/plain
 components/editortoolbar/editortoolbar_impl.pas svneol=native#text/plain
