IDE: Makefiles needed when adding DateTimeCtrls for Lazarus BigIde.
git-svn-id: trunk@46207 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1054,6 +1054,9 @@ components/datadict/testdatadict.lpi svneol=native#text/plain
 components/datadict/testdatadict.lpr svneol=native#text/plain
 components/datadict/tfpcodegenerator.xpm svneol=native#text/plain
 components/datetimectrls/ChangeLog.txt svneol=native#text/plain
+components/datetimectrls/Makefile svneol=native#text/plain
+components/datetimectrls/Makefile.compiled svneol=native#text/plain
+components/datetimectrls/Makefile.fpc svneol=native#text/plain
 components/datetimectrls/calcontrolwrapper.pas svneol=native#text/pascal
 components/datetimectrls/datetimecontrolsreg.pas svneol=native#text/pascal
 components/datetimectrls/datetimectrls.lpk svneol=native#text/plain
