TAChart: extend TOHLCSeries for display as candlesticks. Add demo "financial" with OHLCSeries in OHLC and candlestick mode.
git-svn-id: trunk@46244 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3556,6 +3556,11 @@ components/tachart/demo/extent/extentdemo.lpi svneol=native#text/plain
 components/tachart/demo/extent/extentdemo.lpr svneol=native#text/plain
 components/tachart/demo/extent/main.lfm svneol=native#text/plain
 components/tachart/demo/extent/main.pas svneol=native#text/plain
+components/tachart/demo/financial/data.txt svneol=native#text/plain
+components/tachart/demo/financial/financialdemo.lpi svneol=native#text/plain
+components/tachart/demo/financial/financialdemo.lpr svneol=native#text/plain
+components/tachart/demo/financial/main.lfm svneol=native#text/plain
+components/tachart/demo/financial/main.pas svneol=native#text/plain
 components/tachart/demo/fit/Main.lfm svneol=native#text/plain
 components/tachart/demo/fit/Main.pas svneol=native#text/pascal
 components/tachart/demo/fit/fitdemo.lpi svneol=native#text/plain
