New files for ComboBoxEx and CheckComboBox.
git-svn-id: trunk@46270 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5693,6 +5693,7 @@ images/components/tcalculatordialog.png -text svneol=unset#image/png
 images/components/tcalendar.png -text svneol=unset#image/png
 images/components/tcalendardialog.png -text svneol=unset#image/png
 images/components/tcheckbox.png -text svneol=unset#image/png
+images/components/tcheckcombobox.png -text svneol=unset#image/png
 images/components/tcheckgroup.png -text svneol=unset#image/png
 images/components/tchecklistbox.png -text svneol=unset#image/png
 images/components/tcolorbox.png -text svneol=unset#image/png
@@ -5700,6 +5701,7 @@ images/components/tcolorbutton.png -text svneol=unset#image/png
 images/components/tcolordialog.png -text svneol=unset#image/png
 images/components/tcolorlistbox.png -text svneol=unset#image/png
 images/components/tcombobox.png -text svneol=unset#image/png
+images/components/tcomboboxex.png -text svneol=unset#image/png
 images/components/tcontrolbar.png -text svneol=unset#image/png
 images/components/tcoolbar.png -text svneol=unset#image/png
 images/components/tdatasource.png -text svneol=unset#image/png
@@ -6154,6 +6156,7 @@ lcl/calendar.pp svneol=native#text/pascal
 lcl/checklst.pas svneol=native#text/pascal
 lcl/clipbrd.pp svneol=native#text/pascal
 lcl/colorbox.pas svneol=native#text/pascal
+lcl/comboex.pas svneol=native#text/pascal
 lcl/comctrls.pp svneol=native#text/pascal
 lcl/controls.pp svneol=native#text/pascal
 lcl/cursors.res -text
@@ -6293,6 +6296,7 @@ lcl/include/canvas.inc svneol=native#text/pascal
 lcl/include/checkbox.inc svneol=native#text/pascal
 lcl/include/clipbrd.inc svneol=native#text/pascal
 lcl/include/colorbutton.inc svneol=native#text/pascal
+lcl/include/comboex.inc svneol=native#text/plain
 lcl/include/commondialog.inc svneol=native#text/pascal
 lcl/include/containedaction.inc svneol=native#text/pascal
 lcl/include/control.inc svneol=native#text/pascal
