--- a/.gitattributes
+++ b/.gitattributes
@@ -2926,6 +2926,8 @@ components/pochecker/pochecker.pas svneol=native#text/plain
 components/pochecker/pocheckerconsts.pas svneol=native#text/pascal
 components/pochecker/pocheckermain.lfm svneol=native#text/plain
 components/pochecker/pocheckermain.pp svneol=native#text/plain
+components/pochecker/pocheckersettings.pp svneol=native#text/pascal
+components/pochecker/pocheckerxmlconfig.pp svneol=native#text/pascal
 components/pochecker/pofamilies.pp svneol=native#text/plain
 components/pochecker/resultdlg.lfm svneol=native#text/plain
 components/pochecker/resultdlg.pp svneol=native#text/plain
