IDE, enhance DBGrid columns editor with three buttons: add fields, delete all and fetch labels, modified/adapted patch from Zdravko Gabrovski, issue #25219
git-svn-id: trunk@46395 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1610,6 +1610,8 @@ components/ideintf/componenteditors.pas svneol=native#text/pascal
 components/ideintf/componentreg.pas svneol=native#text/pascal
 components/ideintf/componenttreeview.pas svneol=native#text/pascal
 components/ideintf/compoptsintf.pas svneol=native#text/plain
+components/ideintf/dbgridcolumnspropeditform.lfm svneol=native#text/plain
+components/ideintf/dbgridcolumnspropeditform.pas svneol=native#text/pascal
 components/ideintf/dbpropedits.pas svneol=native#text/pascal
 components/ideintf/docs/baseideintf.xml svneol=native#text/plain
 components/ideintf/docs/compoptsintf.xml svneol=native#text/plain
