translations: German: updates from Swen Heinig
git-svn-id: trunk@46432 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -957,6 +957,7 @@ components/codetools/tests/parsertest.lpi svneol=native#text/plain
 components/codetools/tests/parsertest.lpr svneol=native#text/plain
 components/codetools/unitdictionary.pas svneol=native#text/plain
 components/compilers/c/examples/test.c svneol=native#text/plain
+components/compilers/c/languages/lazcstrconsts.de.po svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.hu.po svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.po svneol=native#text/plain
 components/compilers/c/languages/lazcstrconsts.ru.po svneol=native#text/plain
@@ -2049,6 +2050,7 @@ components/lazdebuggergdbmi/gdbmiserverdebugger.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/gdbmistringconstants.pas svneol=native#text/pascal
 components/lazdebuggergdbmi/gdbtypeinfo.pp svneol=native#text/pascal
 components/lazdebuggergdbmi/ideminilibc.pas svneol=native#text/plain
+components/lazdebuggergdbmi/languages/gdbmiserverdebugger.de.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmiserverdebugger.ru.po svneol=native#text/plain
 components/lazdebuggergdbmi/languages/gdbmistringconstants.es.po svneol=native#text/plain
@@ -2619,6 +2621,7 @@ components/lazsvnpkg/svnstatusform.lfm svneol=native#text/plain
 components/lazsvnpkg/svnstatusform.pas svneol=native#text/plain
 components/lazsvnpkg/svnupdateform.lfm svneol=native#text/plain
 components/lazsvnpkg/svnupdateform.pas svneol=native#text/plain
+components/lazthread/languages/reglazthread.de.po svneol=native#text/plain
 components/lazthread/languages/reglazthread.po svneol=native#text/plain
 components/lazthread/languages/reglazthread.ru.po svneol=native#text/plain
 components/lazthread/languages/threadoptionsdialog.po svneol=native#text/plain
